# entservices-appgateway

./: API.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  DEVELOPMENT.md  DOCS.md  README.md  build_dependencies.sh  cov_build.sh
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: General.instructions.md  Plugin.instructions.md  Pluginimplementation.instructions.md
.github/workflows/: L0-tests.yml  L1-tests.yml  L2-tests-oop.yml  L2-tests.yml  auto-tag-dev.yml  component-release.yml  coverity_component_full_scan.yml  coverity_component_incremental_scan.yml  coverity_full_scan.yml  coverity_incremental_scan.yml  native_full_build.yml  pr-review-check.yml  tests-trigger.yml  update-changelog-and-api-version.yml
AppGateway/: AppGateway.cpp  AppGateway.h  AppGatewayImplementation.cpp  AppGatewayImplementation.h  AppGatewayResponderImplementation.cpp  AppGatewayResponderImplementation.h  AppGatewayTelemetry.cpp  AppGatewayTelemetry.h  CMakeLists.txt  Resolver.cpp  Resolver.h
AppGateway/docs/: AppGatewayTelemetryIntegrationGuide.md  AppGatewayTelemetryMarkers.md  AppGatewayTelemetry_Architecture.md  AppGatewayTelemetry_SequenceDiagrams.md  EntservicesPluginTelemetryMacroUsageSummary.md  NETWORK_HTTP_GRPC_CALL_INVENTORY.md
AppGateway/docs/sequence-diagrams/: 01_Bootstrap_Time_Tracking.md  02_Health_Stats_Reporting.md  03_API_Error_Reporting_Badger.md  04_External_Service_Error_OttServices.md  05_Metric_Latency_Tracking.md  06_COM_RPC_Event_Telemetry.md  07_COM_RPC_Metric_Recording.md  README.md
AppGateway/resolutions/: resolution.base.json
AppGatewayCommon/: AppGatewayCommon.conf.in  AppGatewayCommon.config  AppGatewayCommon.cpp  AppGatewayCommon.h  CMakeLists.txt  Module.h
AppGatewayCommon/delegate/: AppDelegate.h  LifecycleDelegate.h  NetworkDelegate.h  SettingsDelegate.h  SystemDelegate.h  TTSDelegate.h  TextTrackDelegate.h  UserSettingsDelegate.h
AppGatewayCommon/tests/: CurlCmds.md
AppNotifications/: AppNotifications.cpp  AppNotificationsImplementation.cpp  AppNotificationsImplementation.h
AppNotifications/tests/: CurlCmds.md
Tests/: gcc-with-coverage.cmake
Tests/L0Tests/: AppNotifications_L0_TestCases.md  CMakeLists.txt
Tests/L0Tests/AppGateway/: AppGatewayImplementation_BranchTests.cpp  AppGatewayResponderImplementation_Tests.cpp  AppGatewayTelemetry_DirectAccess_Tests.cpp  AppGatewayTelemetry_Tests.cpp  AppGatewayTest.cpp  AppGateway_Init_DeinitTests.cpp  AppGateway_JsonRpcResolveTests.cpp  ContextConversionHelpers.h  ContextUtils.h  ContextUtils_ConversionTests.cpp  Resolver_Configure_And_ResolveTests.cpp  Responder_BehaviorTests.cpp  ServiceMock.h
Tests/L0Tests/AppGatewayCommon/: AppGatewayCommon.cpp  AppGatewayCommon_common_test.h  AppGatewayCommon_display_test.cpp  AppGatewayCommon_events_test.cpp  AppGatewayCommon_lifecycle_test.cpp  AppGatewayCommon_main_test.cpp  AppGatewayCommon_routing_test.cpp  AppGatewayCommon_setters_test.cpp  AppGatewayCommon_test.cpp  ServiceMock.h  test_AppGatewayCommon_L0_Documentation.md
Tests/L0Tests/AppGatewayCommon/prompts/: create-l0-tests-for-staged-changes.md
Tests/L0Tests/AppNotifications/: AppNotificationsServiceMock.h  AppNotificationsTest.cpp  AppNotificationsTestHelpers.cpp  AppNotificationsTestHelpers.h  AppNotifications_BoundaryTests.cpp  AppNotifications_ContextEqualityTests.cpp  AppNotifications_EmitTests.cpp  AppNotifications_Init_DeinitTests.cpp  AppNotifications_SubscribeTests.cpp  AppNotifications_SubscriberMapTests.cpp  AppNotifications_ThunderManagerTests.cpp
Tests/L0Tests/common/: L0Bootstrap.cpp  L0NotificationHandlerFake.hpp  L0ResponderFake.hpp  L0ServiceMock.hpp  L0TestTypes.hpp  README.md
Tests/L1Tests/: AppNotifications_L1_Test_Deep_Dive.md  CMakeLists.txt  L1TestsIN.conf.in  L1_Commands_Prompts.md
Tests/L1Tests/AppGatewayCommon/: AppGatewayCommon_appdelegate_test.cpp  AppGatewayCommon_core_test.cpp  AppGatewayCommon_display_test.cpp  AppGatewayCommon_events_test.cpp  AppGatewayCommon_lifecycle_test.cpp  AppGatewayCommon_network_test.cpp  AppGatewayCommon_system_test.cpp  AppGatewayCommon_usersettings_test.cpp
Tests/L1Tests/cmake/: DefinitionsConfig.cmake  PluginsConfig.cmake
Tests/L1Tests/tests/: test_AppGateway.cpp  test_AppGatewayCommon.cpp  test_AppGatewayCommon.cpp.backup  test_AppNotifications.cpp
Tests/L2Tests/: CMakeLists.txt
Tests/docs/L0/: AppNotifications.md
Tests/docs/L1/: AppNotifications.md  AppNotificationsL1Tests.md
Tests/mocks/: AppGatewayMock.h  AppGatewayResponderMock.h  AppNotificationHandlerMock.h  AppNotificationsMock.h  COMLinkMock.h  CommunicatorMock.h  DispatcherMock.h  ILifecycleManagerStateMock.h  INetworkManagerMock.h  IRDKWindowManagerMock.h  ISharedStorageMock.h  ITextToSpeechMock.h  IUserSettingsMock.h  MockEmitter.h  MockInterfaceDetailsIterator.h  MockJSONRPCDirectLink.h  MockLifecycleManagerState.h  MockNetworkManager.h  MockRDKWindowManager.h  MockSharedStorage.h  MockTextToSpeech.h  MockUserSettings.h  Module.h  NetworkManagerMock.h  NetworkManagerNotificationMock.h  ServiceMock.h  SharedStorageMock.h  SystemServicesMock.h  Telemetry.h  TelemetryMock.h  TextToSpeechMock.h  TextTrackMock.h  ThunderPortability.h  UserSettingNotificationMock.h  UtilsController.h  WindowManagerMock.h  WorkerPoolImplementation.h  mockauthservices.h
docs/: API_REFERENCE.md  RDK8.md
helpers/: AppGatewayTelemetryMarkers.h  BaseEventDelegate.h  ContextUtils.h  ObjectUtils.h  PluginInterfaceBuilder.h  StreamJSONOneShot.h  StringUtils.h  UtilsAppGatewayTelemetry.h  UtilsCallsign.h  UtilsConnections.h  UtilsController.h  UtilsJsonValidation.h  UtilsLogging.h  UtilsSearchRDKProfile.h  UtilsTelemetry.h  UtilsgetFileContent.h  WsManager.h  cSettings.h
